<resources>
    <string name="app_name">Visionary</string>
    <string name="fullname_hint">Name</string>
    <string name="button_continue">CONTINUE</string>
    <string name="take_selfie">TAKE A SELFIE</string>
    <string name="photo_not_stored">Take a selfie and it will recognize you next time.</string>
    <string name="give_camera_permission">Please give camera permission from Settings</string>
    <string name="bottom_nav_face">Face</string>
    <string name="bottom_nav_barcode">Barcode</string>
    <string name="bottom_nav_image">Image</string>
    <string name="bottom_nav_text">Text</string>
    <string name="about">About</string>
    <string name="no_connection">No internet connection</string>
    <string name="not_registered">You have not registered yet!</string>
    <string name="enter_name">Please enter your name</string>
    <string name="welcome">Welcome</string>
    <string name="hello">Hello</string>
    <string name="all_rights_reserved">All rights reserved</string>
    <string name="privacy_statement">
        Image are only sent to our servers for face recognition.\n
        Otherwise your images and data does not leave your phone.\n
        Your data is private, not stored nor used for any other purpose.\n
    </string>

</resources>
