<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_landing_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/activity_landing_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/activity_landing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/actionBarSize">

            <ImageButton
                android:id="@+id/activity_landing_imagebutton_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_menu_white_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/activity_landing_edittext_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="40dp"
            android:hint="@string/fullname_hint" />

        <Button
            android:id="@+id/activity_landing_button_continue"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="64dp"
            android:text="@string/button_continue" />

    </FrameLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/activity_landing_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_menu" />

</android.support.v4.widget.DrawerLayout>